fix the table overflow , table styling

--- a/styles.css
+++ b/styles.css
@@ -20,9 +20,8 @@ body{
     
 }
 .main{
-    height: 100%;
-    width: clamp(600px, 70%, 1000px);
-    /* border: 2px solid red; */
+    height: clamp(auto, 100% 100%);
+    width: clamp(auto, 70%, 1000px);
     padding: 20px;
     box-sizing: border-box;
     text-align: center;
@@ -37,8 +36,6 @@ form{
     justify-content: space-evenly;
     flex-wrap: wrap;
     margin-bottom: 20px;
-    /* gap: 20px; */
-
 }
 .form-group{
     display: flex;
@@ -53,8 +50,6 @@ form{
     
 }
 .form-group  input,select{
-    /* width: 100%; */
-    /* height: 1fr; */
     width: 100%;
     flex-grow: 1;
     font-size: 1.2rem;
@@ -108,7 +103,9 @@ td,th{
     padding: 15px 20px ;
     text-align: left;
     border-bottom: 1px solid grey;
-    /* border-radius: 50px; */
+}
+tr:last-child td {
+    border-bottom: none;
 }
 td button {
     height: 50px;
@@ -122,7 +119,7 @@ table{
     background-color: #2B2C2F;
     border-radius: 20px;
 }
-tr:hover{
+tr:hover td{
     background-color: #303134;
 }
 
